--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "A CLI tool to print gzip and brotli compression statistics for your files.",
   "main": "src/index.js",
+  "bin": {
+    "csc": "bin/cli.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "qunit tests/*-test.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +24,14 @@
   "bugs": {
     "url": "https://github.com/rajasegar/compression-stats-cli/issues"
   },
-  "homepage": "https://github.com/rajasegar/compression-stats-cli#readme"
+  "homepage": "https://github.com/rajasegar/compression-stats-cli#readme",
+  "dependencies": {
+    "chalk": "^4.0.0",
+    "filesize": "^6.1.0",
+    "walk-sync": "^2.1.0"
+  },
+  "devDependencies": {
+    "execa": "^4.0.2",
+    "qunit": "^2.10.0"
+  }
 }
