--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "csc": "bin/cli.js"
   },
   "scripts": {
+    "coverage": "nyc --reporter=lcov --reporter=text-summary npm run test",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
     "test": "qunit tests/*-test.js"
   },
   "repository": {
@@ -31,7 +33,31 @@
     "walk-sync": "^2.1.0"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "coveralls": "^3.1.0",
     "execa": "^4.0.2",
-    "qunit": "^2.10.0"
+    "nyc": "^15.0.1",
+    "qunit": "^2.10.0",
+    "semantic-release": "^17.0.8"
+  },
+  "release": {
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "package.json",
+            "CHANGELOG.md"
+          ],
+          "message": "release(version): Release ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        }
+      ],
+      "@semantic-release/github"
+    ]
   }
 }
