--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "coverage": "nyc --reporter=lcov --reporter=text-summary npm run test",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "lint": "eslint .",
     "test": "qunit tests/*-test.js"
   },
   "repository": {
@@ -36,8 +37,13 @@
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "coveralls": "^3.1.0",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "execa": "^4.0.2",
     "nyc": "^15.0.1",
+    "prettier": "^2.0.5",
     "qunit": "^2.10.0",
     "semantic-release": "^17.0.8"
   },
