feat: add command line options

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "dependencies": {
     "chalk": "^4.0.0",
     "filesize": "^6.1.0",
-    "walk-sync": "^2.1.0"
+    "walk-sync": "^2.1.0",
+    "yargs": "^15.3.1"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^5.0.1",
